add dirver activity

--- a/app/src/main/res/layout/activity_user_homepage.xml
+++ b/app/src/main/res/layout/activity_user_homepage.xml
@@ -32,5 +32,11 @@
         android:id="@+id/btn_go_to_map"
         android:text="@string/map"/>
 
+    <Button
+        android:id="@+id/btn_add_road"
+        android:layout_width="185dp"
+        android:layout_height="wrap_content"
+        android:text="@string/add_road" />
+
 
 </LinearLayout>
