--- a/app/src/main/res/layout/activity_user_homepage.xml
+++ b/app/src/main/res/layout/activity_user_homepage.xml
@@ -31,6 +31,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/btn_go_to_map"
         android:text="@string/map"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_go_to_routes"
+        android:text="@string/go_to_routes"/>
 
 
 </LinearLayout>
