some mod whit notification

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,42 +6,93 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/text_home"
-            android:layout_width="300dp"
+            android:layout_width="241dp"
             android:layout_height="40dp"
-            android:hint="@string/type_destination"
+            android:hint="@string/account_settings"
             android:padding="5dp"
-            android:textSize="15sp" />
+            android:text="@string/account_settings"
+            android:textAllCaps="true"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#504242"
+            android:textSize="24sp" />
 
         <Button
-            android:id="@+id/button_filter"
-            android:layout_width="wrap_content"
+            android:id="@+id/btn_sign_out3"
+            android:layout_width="120dp"
             android:layout_height="40dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="-5dp"
-            android:text="@string/search" />
+            android:background="#2196F3"
+            android:drawableStart="@drawable/logout_icon"
+            android:text="@string/logout"
+            android:textColor="#FFFFFF" />
     </LinearLayout>
+
 
     <Button
         android:id="@+id/btn_change_email3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="213dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="74dp"
+        android:layout_marginBottom="294dp"
         android:text="@string/change_email"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="251dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_change_password3"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btn_change_password3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="73dp"
+        android:layout_marginTop="246dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="377dp"
         android:text="@string/change_password"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="179dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_change_email3"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/changePassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/hint" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
