--- a/app/src/main/res/layout/activity_routes_search.xml
+++ b/app/src/main/res/layout/activity_routes_search.xml
@@ -11,13 +11,13 @@
         android:orientation="horizontal"
         android:padding="10dp">
 
-        <TextView
-            android:layout_width="300dp"
-            android:layout_height="40dp"
-            android:hint="@string/type_destination"
-            android:textSize="15sp"
-            android:padding="5dp"
-            />
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Name" />
 
         <Button
             android:id="@+id/button_filter"
@@ -30,15 +30,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="670dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="-50dp"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="false"
+        android:layout_marginTop="50dp"
+        android:orientation="vertical">
 
 
         <ListView
+            android:id="@+id/lv_routes"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/lv_routes"/>
+            android:layout_height="match_parent">
+
+        </ListView>
     </LinearLayout>
 </RelativeLayout>
