--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,16 +4,19 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/icons8_settings_24"
+        android:iconTint="@color/bg_primary"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/icons8_steering_wheel_24"
+        android:iconTint="@color/bg_primary"
         android:title="@string/title_dashboard" />
 
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/icons8_driver_24"
+        android:iconTint="@color/bg_primary"
         android:title="@string/title_notifications" />
 
 </menu>
