--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,27 @@
     android:layout_width="match_parent"
     android:screenOrientation="portrait"
     android:layout_height="match_parent"
+    android:background="@color/bg_primary"
     tools:context=".MainActivity">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_in"
-        android:layout_centerInParent="true"
-        android:id="@+id/btn_sign_in"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/image_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/harman_logo_main"
+            android:layout_marginBottom="50dp"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sign_in"
+            android:id="@+id/btn_sign_in"
         />
+    </LinearLayout>
 
 </RelativeLayout>
