--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_primary"
@@ -14,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text="@string/account_settings"
         android:textColor="@color/tw__solid_white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_margin="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,12 +25,23 @@
         android:layout_gravity="end"
         android:background="#00FFFFFF"
         android:layout_margin="10dp"
-        android:drawableLeft="@drawable/logout_icon"
+        android:drawableStart="@drawable/logout_icon"
         android:shadowColor="#00FFFFFF"
         android:text="@string/sign_out"
         android:textColor="@color/tw__solid_white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:layout_margin="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_title_account" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
