--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="ListStyle" parent="@android:style/Widget.ListView">
+        <item name="android:textColor">#FF0000</item>
+    </style>
+
 </resources>
